[package]
name = "imgui-impl-win32-rs"
version = "0.1.0"
authors = ["super-continent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "windef", "winuser", "errhandlingapi"] }
imgui = "0.5"
imgui-sys = "0.5.0"
thiserror = "1.0"
